Added pages, created blog which list them

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,10 +6,11 @@ public_folder: assets
 collections:
   - name: post
     label: Post
-    folder: src/content
+    folder: src/pages/blog
     create: true
     fields:
       - { name: path, label: Path }
       - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
+      - { name: author, label: Author }
       - { name: body, label: Body, widget: markdown }
