--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.0",
+    "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.0",
+    "@mdx-js/tag": "^0.20.3",
     "gatsby": "^2.15.29",
     "gatsby-image": "^2.2.24",
+    "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-manifest": "^2.2.20",
     "gatsby-plugin-mdx": "^1.0.47",
     "gatsby-plugin-netlify-cms": "^4.1.22",
