--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "semantic-ui-react": "^0.88.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.5",
