Added images for each products

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -77,7 +77,7 @@ collections:
           widget: select
         }
       - {
-          name: image,
+          name: featuredImage,
           label: Image,
           widget: image
         }
