List products done

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,6 +23,10 @@ collections:
           widget: datetime
         }
       - {
+          name: price,
+          label: Price
+        }
+      - {
           name: color,
           label: Color,
           options: ["Green", "Black", "Grey"],
