Added the details page for each product

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,6 +23,10 @@ collections:
           widget: datetime
         }
       - {
+          name: description,
+          label: Description
+        }
+      - {
           name: price,
           label: Price
         }
