--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-remark-images": "^3.1.28",
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-source-filesystem": "^2.1.29",
+    "gatsby-transformer-json": "^2.2.15",
     "gatsby-transformer-remark": "^2.6.30",
     "gatsby-transformer-sharp": "^2.2.20",
     "netlify-cms-app": "^2.9.7",
